--- a/package.json
+++ b/package.json
@@ -18,8 +18,16 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@dotlottie/player-component": "^2.7.12",
+    "@types/three": "^0.171.0",
+    "bulma": "^1.0.2",
+    "ng-particles": "^3.12.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.1.15",
+    "three": "^0.171.0",
+    "three-gltf-loader": "^1.111.0",
     "tslib": "^2.3.0",
+    "tsparticles": "^3.7.1",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
